# pimostat

./: Cargo.toml  build.rs  flake.nix  module.nix  pimostat.nix  shell.nix
schema/: actor.capnp  controller.capnp  sensor.capnp  temperature.capnp
src/: main.rs
src/actor/: main.rs
src/controller/: main.rs
src/lib/: actor.rs  controller.rs  error.rs  lib.rs  socket.rs  systemd.rs  util.rs
src/lib/actor/: file.rs  gpio.rs  mod.rs
src/lib/sensor/: mod.rs  parse.rs
src/sensor/: main.rs  parse.rs
tests/: integration.rs  w1_therm
tests/ssl/: .gitignore  ca.cnf  client.cnf  gen_certs.sh
tests/ssl/root/: config.cnf
