[package]
name = "pimostat"
version = "0.1.0"
authors = ["Kai Wohlfahrt <kai.wohlfahrt@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
capnp = "0.13"
capnp-rpc = "0.13"
capnp-futures = "0.13"
clap = "2.33"
futures = "0.3"
native-tls = "0.2"
tokio = { version = "0.3", features = [ "time", "net", "fs", "rt", "io-util", "stream", "sync" ] }
tokio-util = { version = "0.4", features = [ "compat" ] }
tokio-native-tls = "0.2.0"
gpiochip = "0.1.1"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
capnpc = "0.13"

[lib]
name = "pimostat"
path = "src/lib/lib.rs"

[[bin]]
name = "controller"
path = "src/bin/controller.rs"

[[bin]]
name = "sensor"
path = "src/bin/sensor.rs"

[[bin]]
name = "actor"
path = "src/bin/actor.rs"
