[package]
name = "pimostat"
version = "0.2.0"
authors = ["Kai Wohlfahrt <kai.wohlfahrt@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
capnp = "0.14"
capnp-rpc = "0.14"
capnp-futures = "0.14"
clap = { version = "3", features = [ "derive" ] }
futures = "0.3"
native-tls = "0.2"
tokio = { version = "1", features = [ "time", "net", "fs", "rt", "io-util", "sync" ] }
tokio-util = { version = "0.6", features = [ "compat" ] }
tokio-stream = { version = "0.1", features = [ "net" ] }
tokio-native-tls = "0.3"
gpiochip = "0.1.1"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
capnpc = "0.14"

[lib]
name = "pimostat"
path = "src/lib/lib.rs"

[[bin]]
name = "controller"
path = "src/bin/controller.rs"

[[bin]]
name = "sensor"
path = "src/bin/sensor.rs"

[[bin]]
name = "actor"
path = "src/bin/actor.rs"
